; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavdevice/extr_xcbgrab.c_get_screen.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavdevice/extr_xcbgrab.c_get_screen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32)* @get_screen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_screen(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call { i64, i32* } @xcb_setup_roots_iterator(i32* %7)
  %9 = bitcast %struct.TYPE_4__* %5 to { i64, i32* }*
  %10 = getelementptr inbounds { i64, i32* }, { i64, i32* }* %9, i32 0, i32 0
  %11 = extractvalue { i64, i32* } %8, 0
  store i64 %11, i64* %10, align 8
  %12 = getelementptr inbounds { i64, i32* }, { i64, i32* }* %9, i32 0, i32 1
  %13 = extractvalue { i64, i32* } %8, 1
  store i32* %13, i32** %12, align 8
  store i32* null, i32** %6, align 8
  br label %14

14:                                               ; preds = %27, %2
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp sgt i64 %16, 0
  br i1 %17, label %18, label %29

18:                                               ; preds = %14
  %19 = load i32, i32* %4, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %18
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 1
  %23 = load i32*, i32** %22, align 8
  store i32* %23, i32** %6, align 8
  br label %29

24:                                               ; preds = %18
  %25 = load i32, i32* %4, align 4
  %26 = add nsw i32 %25, -1
  store i32 %26, i32* %4, align 4
  br label %27

27:                                               ; preds = %24
  %28 = call i32 @xcb_screen_next(%struct.TYPE_4__* %5)
  br label %14

29:                                               ; preds = %21, %14
  %30 = load i32*, i32** %6, align 8
  ret i32* %30
}

declare dso_local { i64, i32* } @xcb_setup_roots_iterator(i32*) #1

declare dso_local i32 @xcb_screen_next(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
